--- a/src/DagAir.IngestionNode.Data/DagAir.IngestionNode.Data.csproj
+++ b/src/DagAir.IngestionNode.Data/DagAir.IngestionNode.Data.csproj
@@ -1,15 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="EFCore.NamingConventions" Version="5.0.2" />
       <PackageReference Include="InfluxDB.Client" Version="2.1.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DagAir.IngestionNode.Contracts\DagAir.IngestionNode.Contracts.csproj" />
       <ProjectReference Include="..\DagAir.IngestionNode\DagAir.IngestionNode.csproj" />
     </ItemGroup>
 
