DAGAIR_1 Add rabbitmq background service

--- a/src/DagAir.IngestionNode/appsettings.json
+++ b/src/DagAir.IngestionNode/appsettings.json
@@ -10,8 +10,10 @@
         "http://*:8081"
     ],
     "rabbitMq": {
-        "host": "localhost",
+        "host": "192.168.0.12",
         "virtualhost": "",
-        "connectionName": "dagair-ingestion-node"
+        "connectionName": "dagair-ingestion-node",
+        "user": "guest",
+        "password": "guest"
     }
 }
