--- a/src/DagAir.MassTransit.RabbitMq/DagAir.MassTransit.RabbitMq.csproj
+++ b/src/DagAir.MassTransit.RabbitMq/DagAir.MassTransit.RabbitMq.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.2" />
       <PackageReference Include="MassTransit.RabbitMQ" Version="7.2.2" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
