--- a/src/DagAir.IngestionNode/appsettings.json
+++ b/src/DagAir.IngestionNode/appsettings.json
@@ -9,11 +9,9 @@
     "webHostingUrls": [
         "http://*:8081"
     ],
-    "rabbitMq": {
-        "host": "192.168.0.12",
-        "virtualhost": "",
-        "connectionName": "dagair-ingestion-node",
-        "user": "guest",
-        "password": "guest"
+    "sensorRabbitMqConfiguration": {
+        "hostName": "192.168.0.12",
+        "sensorExchange": "amq.topic",
+        "routingKey": "room_measurements"
     }
 }
