--- a/src/DagAir.IngestionNode.Infrastructure/DagAir.IngestionNode.Infrastructure.csproj
+++ b/src/DagAir.IngestionNode.Infrastructure/DagAir.IngestionNode.Infrastructure.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
+      <ProjectReference Include="..\DagAir.MassTransit.RabbitMq\DagAir.MassTransit.RabbitMq.csproj" />
     </ItemGroup>
 
 </Project>
