DAGAIR-3 Add influx tests that check whether bucket has been created

--- a/src/DagAir.IngestionNode.Migrations/DagAir.IngestionNode.Migrations.csproj
+++ b/src/DagAir.IngestionNode.Migrations/DagAir.IngestionNode.Migrations.csproj
@@ -24,5 +24,13 @@
     <ItemGroup>
       <ProjectReference Include="..\DagAir.IngestionNode.Data\DagAir.IngestionNode.Data.csproj" />
     </ItemGroup>
+    
+    <ItemGroup>
+        <Content Include="appsettings.json">
+            <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+        </Content>
+    </ItemGroup>
 
 </Project>
