--- a/src/DagAir.IngestionNode.Data/DagAir.IngestionNode.Data.csproj
+++ b/src/DagAir.IngestionNode.Data/DagAir.IngestionNode.Data.csproj
@@ -10,11 +10,11 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.10" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\DagAir.IngestionNode.Contracts\DagAir.IngestionNode.Contracts.csproj" />
-      <ProjectReference Include="..\DagAir.IngestionNode\DagAir.IngestionNode.csproj" />
     </ItemGroup>
 
 </Project>
