--- a/src/DagAir.IngestionNode/DagAir.IngestionNode.csproj
+++ b/src/DagAir.IngestionNode/DagAir.IngestionNode.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DagAir.IngestionNode.Contracts\DagAir.IngestionNode.Contracts.csproj" />
+    <ProjectReference Include="..\DagAir.IngestionNode.Data\DagAir.IngestionNode.Data.csproj" />
     <ProjectReference Include="..\DagAir.IngestionNode.Infrastructure\DagAir.IngestionNode.Infrastructure.csproj" />
     <ProjectReference Include="..\DagAir.MassTransit.RabbitMq\DagAir.MassTransit.RabbitMq.csproj" />
   </ItemGroup>
