--- a/src/DagAir.IngestionNode/Properties/launchSettings.json
+++ b/src/DagAir.IngestionNode/Properties/launchSettings.json
@@ -3,7 +3,8 @@
     "DagAir.IngestionNode": {
       "commandName": "Project",
       "environmentVariables": {
-        "DOTNET_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "https://localhost:5001;http://localhost:5000"
       }
     }
   }
