DAGAIR-3 fix masstransit configuration

--- a/src/DagAir.IngestionNode/appsettings.json
+++ b/src/DagAir.IngestionNode/appsettings.json
@@ -9,9 +9,24 @@
     "webHostingUrls": [
         "http://*:8081"
     ],
-    "sensorRabbitMqConfiguration": {
-        "hostName": "192.168.0.12",
+    "rabbitMq":
+    {
+        "hostName": "localhost",
+        "virtualHost": "",
+        "protocol": "rabbitmq://",
+        "connectionName": "dagair-ingestion-node"
+    },
+    "sensorRabbitMq": {
+        "hostName": "localhost",
         "sensorExchange": "amq.topic",
         "routingKey": "room_measurements"
+    },
+    "DagAirInfluxConfiguration": {
+        "token": "04QQQNYZs0E1KWImbwYgWBDPg6m6AhI-uATbrJzgEbMBPcPGI8g_iCrAQeD5yBitaoxKmtUvrijHQsdfIz2I1A==",
+        "org": "dagair",
+        "orgId": "a4d3426e45798e43",
+        "bucketName": "dagair_bucket",
+        "url": "http://localhost:8086",
+        "retention": 3600
     }
 }
