--- a/src/DagAir.PolicyNode/appsettings.json
+++ b/src/DagAir.PolicyNode/appsettings.json
@@ -8,9 +8,7 @@
   },
   "rabbitMq":
   {
-    "hostNames": [
-      "localhost"
-    ],
+    "hostName": "localhost",
     "virtualHost": "",
     "protocol": "rabbitmq://",
     "connectionName": "dagair-policy-node"
