--- a/src/DagAir.IngestionNode.Tests/DagAir.IngestionNode.Tests.csproj
+++ b/src/DagAir.IngestionNode.Tests/DagAir.IngestionNode.Tests.csproj
@@ -7,7 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="6.1.0" />
         <PackageReference Include="InfluxDB.Client" Version="2.1.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
         <PackageReference Include="NUnit" Version="3.13.1" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
