--- a/src/DagAir.PolicyNode/DagAir.PolicyNode.csproj
+++ b/src/DagAir.PolicyNode/DagAir.PolicyNode.csproj
@@ -15,6 +15,7 @@
       <ProjectReference Include="..\DagAir.Components.Healthchecks\DagAir.Components.Healthchecks.csproj" />
       <ProjectReference Include="..\DagAir.Components.Logging\DagAir.Components.Logging.csproj" />
       <ProjectReference Include="..\DagAir.IngestionNode.Contracts\DagAir.IngestionNode.Contracts.csproj" />
+      <ProjectReference Include="..\DagAir.IngestionNode.Infrastructure\DagAir.IngestionNode.Infrastructure.csproj" />
       <ProjectReference Include="..\DagAir.MassTransit.RabbitMq\DagAir.MassTransit.RabbitMq.csproj" />
       <ProjectReference Include="..\DagAir.PolicyNode.Contracts\DagAir.PolicyNode.Contracts.csproj" />
       <ProjectReference Include="..\DagAir.PolicyNode.Data\DagAir.PolicyNode.Data.csproj" />
