Fix masstransit configuration

--- a/src/DagAir.IngestionNode/appsettings.json
+++ b/src/DagAir.IngestionNode/appsettings.json
@@ -12,9 +12,9 @@
     "rabbitMq":
     {
         "hostName": "localhost",
-        "virtualHost": "",
+        "virtualHost": "dagair",
         "protocol": "rabbitmq://",
-        "connectionName": "dagair-ingestion-node"
+        "connectionName": "ingestion-node"
     },
     "sensorRabbitMq": {
         "hostName": "localhost",
