--- a/src/DagAir.PolicyNode/appsettings.json
+++ b/src/DagAir.PolicyNode/appsettings.json
@@ -9,8 +9,8 @@
   "rabbitMq":
   {
     "hostName": "localhost",
-    "virtualHost": "",
+    "virtualHost": "dagair",
     "protocol": "rabbitmq://",
-    "connectionName": "dagair-policy-node"
+    "connectionName": "policy-node"
   }
 }
