--- a/src/DagAir.QueryNode/appsettings.json
+++ b/src/DagAir.QueryNode/appsettings.json
@@ -8,11 +8,9 @@
   },
   "rabbitMq":
   {
-    "hostNames": [
-      "localhost"
-    ],
-    "virtualHost": "",
+    "hostName": "localhost",
+    "virtualHost": "dagair",
     "protocol": "rabbitmq://",
-    "connectionName": "dagair-policy-node"
+    "connectionName": "query-node"
   }
 }
