DAGAIR-3 Add sensors API

--- a/src/DagAir.IngestionNode/DagAir.IngestionNode.csproj
+++ b/src/DagAir.IngestionNode/DagAir.IngestionNode.csproj
@@ -21,7 +21,7 @@
     <ProjectReference Include="..\DagAir.IngestionNode.Contracts\DagAir.IngestionNode.Contracts.csproj" />
     <ProjectReference Include="..\DagAir.IngestionNode.Data\DagAir.IngestionNode.Data.csproj" />
     <ProjectReference Include="..\DagAir.IngestionNode.Infrastructure\DagAir.IngestionNode.Infrastructure.csproj" />
-    <ProjectReference Include="..\DagAir.MassTransit.RabbitMq\DagAir.MassTransit.RabbitMq.csproj" />
+    <ProjectReference Include="..\DagAir.Components.MassTransit.RabbitMq\DagAir.Components.MassTransit.RabbitMq.csproj" />
   </ItemGroup>
 
 </Project>
