--- a/src/DagAir.PolicyNode/DagAir.PolicyNode.csproj
+++ b/src/DagAir.PolicyNode/DagAir.PolicyNode.csproj
@@ -16,7 +16,7 @@
       <ProjectReference Include="..\DagAir.Components.Logging\DagAir.Components.Logging.csproj" />
       <ProjectReference Include="..\DagAir.IngestionNode.Contracts\DagAir.IngestionNode.Contracts.csproj" />
       <ProjectReference Include="..\DagAir.IngestionNode.Infrastructure\DagAir.IngestionNode.Infrastructure.csproj" />
-      <ProjectReference Include="..\DagAir.MassTransit.RabbitMq\DagAir.MassTransit.RabbitMq.csproj" />
+      <ProjectReference Include="..\DagAir.Components.MassTransit.RabbitMq\DagAir.Components.MassTransit.RabbitMq.csproj" />
       <ProjectReference Include="..\DagAir.PolicyNode.Contracts\DagAir.PolicyNode.Contracts.csproj" />
       <ProjectReference Include="..\DagAir.PolicyNode.Data\DagAir.PolicyNode.Data.csproj" />
       <ProjectReference Include="..\DagAir.PolicyNode.Infrastructure\DagAir.PolicyNode.Infrastructure.csproj" />
