--- a/src/DagAir.Sensors.Data.Migrations/appsettings.json
+++ b/src/DagAir.Sensors.Data.Migrations/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DagAir": "server=localhost;database=DagAir;user=root;password=Rolka7Sushi;"
+    "DagAir.Sensors": "server=localhost;database=DagAir.Sensors;user=root;password=Rolka7Sushi;"
   }
 }
