DAGAIR-4 Change folder structure of the whole solution

--- a/src/DagAir_Facilities/DagAir.Facilities/DagAir.Facilities.csproj
+++ b/src/DagAir_Facilities/DagAir.Facilities/DagAir.Facilities.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DagAir.Components.Healthchecks\DagAir.Components.Healthchecks.csproj" />
+      <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.Healthchecks\DagAir.Components.Healthchecks.csproj" />
     </ItemGroup>
 
 </Project>
