--- a/src/DagAir_PolicyNode/DagAir.PolicyNode.Infrastructure/DagAir.PolicyNode.Infrastructure.csproj
+++ b/src/DagAir_PolicyNode/DagAir.PolicyNode.Infrastructure/DagAir.PolicyNode.Infrastructure.csproj
@@ -17,7 +17,7 @@
     </ItemGroup>
     
     <ItemGroup>
-      <ProjectReference Include="..\DagAir.Components.MassTransit.RabbitMq\DagAir.Components.MassTransit.RabbitMq.csproj" />
+      <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.MassTransit.RabbitMq\DagAir.Components.MassTransit.RabbitMq.csproj" />
     </ItemGroup>
 
 </Project>
