--- a/src/DagAir_QueryNode/DagAir.QueryNode.Data.Migrations/DagAir.QueryNode.Data.Migrations.csproj
+++ b/src/DagAir_QueryNode/DagAir.QueryNode.Data.Migrations/DagAir.QueryNode.Data.Migrations.csproj
@@ -17,7 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DagAir.IngestionNode.Data\DagAir.IngestionNode.Data.csproj" />
+      <ProjectReference Include="..\..\DagAir_IngestionNode\DagAir.IngestionNode.Data\DagAir.IngestionNode.Data.csproj" />
       <ProjectReference Include="..\DagAir.QueryNode.Data\DagAir.QueryNode.Data.csproj" />
     </ItemGroup>
 
