--- a/src/DagAir_IngestionNode/DagAir.IngestionNode.Infrastructure/DagAir.IngestionNode.Infrastructure.csproj
+++ b/src/DagAir_IngestionNode/DagAir.IngestionNode.Infrastructure/DagAir.IngestionNode.Infrastructure.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DagAir.Components.MassTransit.RabbitMq\DagAir.Components.MassTransit.RabbitMq.csproj" />
+      <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.MassTransit.RabbitMq\DagAir.Components.MassTransit.RabbitMq.csproj" />
     </ItemGroup>
 
 </Project>
