--- a/src/DagAir_IngestionNode/DagAir.IngestionNode/DagAir.IngestionNode.csproj
+++ b/src/DagAir_IngestionNode/DagAir.IngestionNode/DagAir.IngestionNode.csproj
@@ -16,13 +16,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DagAir.Components.Healthchecks\DagAir.Components.Healthchecks.csproj" />
-    <ProjectReference Include="..\DagAir.Components.HttpClients\DagAir.Components.HttpClients.csproj" />
-    <ProjectReference Include="..\DagAir.Components.Logging\DagAir.Components.Logging.csproj" />
-    <ProjectReference Include="..\DagAir.IngestionNode.Contracts\DagAir.IngestionNode.Contracts.csproj" />
-    <ProjectReference Include="..\DagAir.IngestionNode.Data\DagAir.IngestionNode.Data.csproj" />
-    <ProjectReference Include="..\DagAir.IngestionNode.Infrastructure\DagAir.IngestionNode.Infrastructure.csproj" />
-    <ProjectReference Include="..\DagAir.Components.MassTransit.RabbitMq\DagAir.Components.MassTransit.RabbitMq.csproj" />
+    <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.Healthchecks\DagAir.Components.Healthchecks.csproj" />
+    <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.HttpClients\DagAir.Components.HttpClients.csproj" />
+    <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.MassTransit.RabbitMq\DagAir.Components.MassTransit.RabbitMq.csproj" />
+    <ProjectReference Include="..\..\DagAir_IngestionNode\DagAir.IngestionNode.Contracts\DagAir.IngestionNode.Contracts.csproj" />
+    <ProjectReference Include="..\..\DagAir_IngestionNode\DagAir.IngestionNode.Data\DagAir.IngestionNode.Data.csproj" />
+    <ProjectReference Include="..\..\DagAir_IngestionNode\DagAir.IngestionNode.Infrastructure\DagAir.IngestionNode.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
