--- a/src/DagAir_PolicyNode/DagAir.PolicyNode.Data/DagAir.PolicyNode.Data.csproj
+++ b/src/DagAir_PolicyNode/DagAir.PolicyNode.Data/DagAir.PolicyNode.Data.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DagAir.IngestionNode.Contracts\DagAir.IngestionNode.Contracts.csproj" />
+      <ProjectReference Include="..\..\DagAir_IngestionNode\DagAir.IngestionNode.Contracts\DagAir.IngestionNode.Contracts.csproj" />
     </ItemGroup>
 
     <ItemGroup>
