--- a/src/DagAir_QueryNode/DagAir.QueryNode/DagAir.QueryNode.csproj
+++ b/src/DagAir_QueryNode/DagAir.QueryNode/DagAir.QueryNode.csproj
@@ -5,9 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DagAir.Components.ApiModels\DagAir.Components.ApiModels.csproj" />
-      <ProjectReference Include="..\DagAir.Components.Healthchecks\DagAir.Components.Healthchecks.csproj" />
-      <ProjectReference Include="..\DagAir.Components.Logging\DagAir.Components.Logging.csproj" />
+      <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.ApiModels\DagAir.Components.ApiModels.csproj" />
+      <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.Healthchecks\DagAir.Components.Healthchecks.csproj" />
       <ProjectReference Include="..\DagAir.QueryNode.Data\DagAir.QueryNode.Data.csproj" />
     </ItemGroup>
 
