--- a/src/DagAir_Sensors/DagAir.Sensors/DagAir.Sensors.csproj
+++ b/src/DagAir_Sensors/DagAir.Sensors/DagAir.Sensors.csproj
@@ -5,8 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DagAir.Components.ApiModels\DagAir.Components.ApiModels.csproj" />
-      <ProjectReference Include="..\DagAir.Components.Healthchecks\DagAir.Components.Healthchecks.csproj" />
+      <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.ApiModels\DagAir.Components.ApiModels.csproj" />
+      <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.Healthchecks\DagAir.Components.Healthchecks.csproj" />
       <ProjectReference Include="..\DagAir.Sensors.Data\DagAir.Sensors.Data.csproj" />
     </ItemGroup>
 
