DAGAIR-5 Hide sensitive data using secret manager

--- a/src/DagAir_Facilities/DagAir.Facilities.Data.Migrations/DagAir.Facilities.Data.Migrations.csproj
+++ b/src/DagAir_Facilities/DagAir.Facilities.Data.Migrations/DagAir.Facilities.Data.Migrations.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <UserSecretsId>09bfe141-1cb5-4c43-bce6-025fc3da5f21</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
