--- a/src/DagAir_Facilities/DagAir.Facilities.Data.Migrations/appsettings.json
+++ b/src/DagAir_Facilities/DagAir.Facilities.Data.Migrations/appsettings.json
@@ -1,5 +1,8 @@
 {
   "ConnectionStrings": {
-    "DagAir.Facilities": "server=localhost;database=DagAir.Facilities;user=root;password=Rolka7Sushi;"
+    "DagAir.Facilities": "server=localhost;database=DagAir.Facilities;user=root;password="
+  },
+  "ConnectionKeys": {
+    "DagAir.Facilities": "12345"
   }
 }
