--- a/src/DagAir_PolicyNode/DagAir.PolicyNode.Data.Migrations/DagAir.PolicyNode.Data.Migrations.csproj
+++ b/src/DagAir_PolicyNode/DagAir.PolicyNode.Data.Migrations/DagAir.PolicyNode.Data.Migrations.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <UserSecretsId>c26848bd-95b8-48c6-a395-30467c7748db</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
