--- a/src/DagAir_PolicyNode/DagAir.PolicyNode.Data.Migrations/appsettings.json
+++ b/src/DagAir_PolicyNode/DagAir.PolicyNode.Data.Migrations/appsettings.json
@@ -1,5 +1,8 @@
 {
   "ConnectionStrings": {
-    "DagAir.PolicyNode": "server=localhost;database=DagAir.PolicyNode;user=root;password=Rolka7Sushi;"
+    "DagAir.PolicyNode": "server=localhost;database=DagAir.PolicyNode;user=root;password="
+  },
+  "ConnectionKeys": {
+    "DagAir.PolicyNode": "12345"
   }
 }
