--- a/src/DagAir_QueryNode/DagAir.QueryNode.Data.Migrations/appsettings.json
+++ b/src/DagAir_QueryNode/DagAir.QueryNode.Data.Migrations/appsettings.json
@@ -1,5 +1,8 @@
 {
   "ConnectionStrings": {
-    "DagAir": "server=localhost;database=DagAir;user=root;password=Rolka7Sushi;"
+    "DagAir": "server=localhost;database=DagAir;user=root;password="
+  },
+  "ConnectionKeys": {
+    "DagAir": "12345"
   }
 }
