--- a/src/DagAir_Sensors/DagAir.Sensors.Data.Migrations/appsettings.json
+++ b/src/DagAir_Sensors/DagAir.Sensors.Data.Migrations/appsettings.json
@@ -1,5 +1,8 @@
 {
   "ConnectionStrings": {
-    "DagAir.Sensors": "server=localhost;database=DagAir.Sensors;user=root;password=Rolka7Sushi;"
+    "DagAir.Sensors": "server=localhost;database=DagAir.Sensors;user=root;password="
+  },
+  "ConnectionKeys": {
+    "DagAir.Sensors": "12345"
   }
 }
