DAGAIR-8 Fix logging

--- a/src/DagAir_Facilities/DagAir.Facilities/DagAir.Facilities.csproj
+++ b/src/DagAir_Facilities/DagAir.Facilities/DagAir.Facilities.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.Healthchecks\DagAir.Components.Healthchecks.csproj" />
+      <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.Logging\DagAir.Components.Logging.csproj" />
     </ItemGroup>
 
 </Project>
