--- a/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.json
+++ b/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.json
@@ -6,6 +6,11 @@
             "Microsoft": "Information"
         }
     },
+    "Serilog": {
+        "File": {
+            "Path": "C:/DagAir_Logs/DagAir_IngestionNode_log.txt"
+        }
+    },
     "webHostingUrls": [
         "http://*:8081"
     ],
