--- a/src/DagAir_Policies/DagAir.Policies/appsettings.json
+++ b/src/DagAir_Policies/DagAir.Policies/appsettings.json
@@ -6,6 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Serilog": {
+    "File": {
+      "Path": "C:/DagAir_Logs/DagAir_Policies_log.txt"
+    }
+  },
   "ConnectionStrings": {
     "DagAir.Policies": "server=localhost;database=DagAir.Policies;user=root;password="
   },
