--- a/src/DagAir_PolicyNode/DagAir.PolicyNode/appsettings.json
+++ b/src/DagAir_PolicyNode/DagAir.PolicyNode/appsettings.json
@@ -6,6 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Serilog": {
+    "File": {
+      "Path": "C:/DagAir_Logs/DagAir_PolicyNode_log.txt"
+    }
+  },
   "rabbitMq":
   {
     "hostName": "localhost",
