--- a/src/DagAir_Sensors/DagAir.Sensors/appsettings.json
+++ b/src/DagAir_Sensors/DagAir.Sensors/appsettings.json
@@ -6,6 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Serilog": {
+    "File": {
+      "Path": "C:/DagAir_Logs/DagAir_Sensors_log.txt"
+    }
+  },
   "ConnectionStrings": {
     "DagAir.Sensors": "server=localhost;database=DagAir.Sensors;user=root;password="
   },
