--- a/src/DagAir.ClientNode/Properties/launchSettings.json
+++ b/src/DagAir.ClientNode/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:10761",
-      "sslPort": 44314
+      "applicationUrl": "http://localhost:51130",
+      "sslPort": 44376
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "DagAir.Swagger": {
+    "DagAir.ClientNode": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
