--- a/src/DagAir_Facilities/DagAir.Facilities/appsettings.json
+++ b/src/DagAir_Facilities/DagAir.Facilities/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Serilog": {
+    "File": {
+      "Path": "C:/DagAir_Logs/DagAir_Facilities_log.txt"
+    },
   "AllowedHosts": "*"
 }
