--- a/src/DagAir.Policies.Tests/DagAir.Policies.Tests.csproj
+++ b/src/DagAir.Policies.Tests/DagAir.Policies.Tests.csproj
@@ -23,22 +23,15 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DagAir_Components\DagAir.Components.Logging\DagAir.Components.Logging.csproj" />
-      <ProjectReference Include="..\DagAir_Components\DagAir.Components.MassTransit.RabbitMq\DagAir.Components.MassTransit.RabbitMq.csproj" />
-      <ProjectReference Include="..\DagAir_Sensors\DagAir.Sensors.Data\DagAir.Sensors.Data.csproj" />
-      <ProjectReference Include="..\DagAir_Sensors\DagAir.Sensors\DagAir.Sensors.csproj" />
+      <None Update="appsettings.Integration.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
-      <Reference Include="Microsoft.Extensions.Hosting, Version=5.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
-        <HintPath>..\..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\5.0.9\Microsoft.Extensions.Hosting.dll</HintPath>
-      </Reference>
-    </ItemGroup>
-    
-    <ItemGroup>
-        <None Update="appsettings.Integration.json">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
+      <ProjectReference Include="..\DagAir_Components\DagAir.Components.Logging\DagAir.Components.Logging.csproj" />
+      <ProjectReference Include="..\DagAir_Policies\DagAir.Policies.Data\DagAir.Policies.Data.csproj" />
+      <ProjectReference Include="..\DagAir_Policies\DagAir.Policies\DagAir.Policies.csproj" />
     </ItemGroup>
 
 </Project>
