DAGAIR-10 Fix continuous integration workflow

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -18,6 +18,14 @@ jobs:
         with:
           dotnet-version: 5.0.102
 
+      - name: Setup test infrastructure
+        shell: bash
+        run: ./docker-compose -f docker-compose.tests.infrastructure.yml pull && docker-compose -f docker-compose.tests.infrastructure.yml up -d
+
       - name: Build @ Test
         shell: bash
         run: ./build.sh --verbosity verbose
+
+      - name: Remove test infrastructure
+        shell: bash
+        run: docker-compose -f docker-compose.tests.infrastructure.yml rm -f -s
