DAGAIR-11 Add new measurements api tests

--- a/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.json
+++ b/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.json
@@ -23,6 +23,7 @@
     },
     "sensorRabbitMq": {
         "hostName": "localhost",
+        "virtualHost": "dagair",
         "sensorExchange": "amq.topic",
         "routingKey": "room_measurements"
     },
