--- a/src/DagAir_Policies/DagAir.Policies/Properties/launchSettings.json
+++ b/src/DagAir_Policies/DagAir.Policies/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:12001;http://localhost:12000",
+      "applicationUrl": "http://localhost:12000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
