DAGAIR-11 Fix broken consumer in policy node

--- a/src/DagAir_PolicyNode/DagAir.PolicyNode/appsettings.json
+++ b/src/DagAir_PolicyNode/DagAir.PolicyNode/appsettings.json
@@ -17,5 +17,8 @@
     "virtualHost": "dagair",
     "protocol": "rabbitmq://",
     "connectionName": "policy-node"
+  },
+  "serviceUrls": {
+    "DagAir.Policies": "http://localhost:12000/"
   }
 }
