DAGAIR-13 Create client web application

--- a/docker-compose.tests.infrastructure.yml
+++ b/docker-compose.tests.infrastructure.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   influxdb:
     image: influxdb:2.0.8
-    container_name: influxdb
+    container_name: influxdb1
     volumes:
       - test_influxdb_volume:/var/lib/influxdb2
     ports:
