--- a/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.json
+++ b/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.json
@@ -28,9 +28,9 @@
         "routingKey": "room_measurements"
     },
     "DagAirInfluxConfiguration": {
-        "token": "04QQQNYZs0E1KWImbwYgWBDPg6m6AhI-uATbrJzgEbMBPcPGI8g_iCrAQeD5yBitaoxKmtUvrijHQsdfIz2I1A==",
-        "org": "dagair",
-        "orgId": "a4d3426e45798e43",
+        "token": "test_token1",
+        "org": "6ef31b83912e46c2",
+        "orgId": "6ef31b83912e46c2",
         "bucketName": "dagair_bucket",
         "url": "http://localhost:8086",
         "retention": 3600
