DAGAIR-14 Add Docker environment

--- a/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.Docker.json
+++ b/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.Docker.json
@@ -1,19 +1,7 @@
 ﻿{
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "System": "Warning",
-            "Microsoft": "Information"
-        }
-    },
-    "Serilog": {
-        "File": {
-            "Path": "C:/DagAir_Logs/DagAir_IngestionNode_log.txt"
-        }
-    },
     "rabbitMq":
     {
-        "hostName": "localhost",
+        "hostName": "rabbitmq",
         "virtualHost": "dagair",
         "userName": "guest",
         "password": "guest",
@@ -21,7 +9,7 @@
         "connectionName": "ingestion-node"
     },
     "sensorRabbitMq": {
-        "hostName": "localhost",
+        "hostName": "rabbitmq",
         "virtualHost": "dagair",
         "userName": "guest",
         "password": "guest",
@@ -34,10 +22,10 @@
         "org": "6ef31b83912e46c2",
         "orgId": "6ef31b83912e46c2",
         "bucketName": "dagair_bucket",
-        "url": "http://localhost:8086",
+        "url": "http://influxdb:8086",
         "retention": 3600
     },
     "serviceUrls": {
-        "DagAir.Sensors": "http://localhost:9002/"
+        "DagAir.Sensors": "http://sensors_api:8080/"
     }
 }
