--- a/src/DagAir_IngestionNode/DagAir.IngestionNode/DagAir.IngestionNode.csproj
+++ b/src/DagAir_IngestionNode/DagAir.IngestionNode/DagAir.IngestionNode.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="5.0.2" />
     <PackageReference Include="InfluxDB.Client" Version="2.1.0" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.2.2" />
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.2" />
