DAGAIR-14 Further modify docker environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,9 @@ services:
       target: final
       context: ./src
       dockerfile: ./DagAir_Sensors/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Docker
+      - ConnectionKeys__DagAir.Sensors=${SENSORS_CONNECTIONKEYS}
     ports:
       - "8080:80"
     networks:
@@ -53,6 +56,9 @@ services:
       target: final
       context: ./src
       dockerfile: ./DagAir_Policies/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Docker
+      - ConnectionKeys__DagAir.Policies=${POLICIES_CONNECTIONKEYS}
     ports:
       - "8081:80"
     networks:
