--- a/src/DagAir_IngestionNode/DagAir.IngestionNode.Migrations/appsettings.json
+++ b/src/DagAir_IngestionNode/DagAir.IngestionNode.Migrations/appsettings.json
@@ -1,9 +1,8 @@
 {
     "DagAirInfluxConfiguration": {
-        "token": "04QQQNYZs0E1KWImbwYgWBDPg6m6AhI-uATbrJzgEbMBPcPGI8g_iCrAQeD5yBitaoxKmtUvrijHQsdfIz2I1A==",
-        "org": "dagair",
-        "orgId": "a4d3426e45798e43",
-        "bucketName": "dagair_bucket",
+        "token": "local_token1",
+        "org": "local_org1",
+        "bucketName": "local_bucket1",
         "url": "http://localhost:8086",
         "retention": 3600
     }
