--- a/src/DagAir_Facilities/DagAir.Facilities/DagAir.Facilities.csproj
+++ b/src/DagAir_Facilities/DagAir.Facilities/DagAir.Facilities.csproj
@@ -6,8 +6,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.ApiModels\DagAir.Components.ApiModels.csproj" />
       <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.Healthchecks\DagAir.Components.Healthchecks.csproj" />
       <ProjectReference Include="..\..\DagAir_Components\DagAir.Components.Logging\DagAir.Components.Logging.csproj" />
+      <ProjectReference Include="..\DagAir.Facilities.Data\DagAir.Facilities.Data.csproj" />
     </ItemGroup>
 
 </Project>
