DAGAIR-17 Fix docker configuration

--- a/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.Docker.json
+++ b/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.Docker.json
@@ -18,14 +18,13 @@
         "routingKey": "room_measurements"
     },
     "DagAirInfluxConfiguration": {
-        "token": "test_token1",
-        "org": "6ef31b83912e46c2",
-        "orgId": "6ef31b83912e46c2",
-        "bucketName": "dagair_bucket",
-        "url": "http://influxdb:8086",
+        "token": "local_token1",
+        "org": "local_org1",
+        "bucketName": "local_bucket1",
+        "url": "http://influxdb1:8086",
         "retention": 3600
     },
     "serviceUrls": {
-        "DagAir.Sensors": "http://sensors_api:8080/"
+        "DagAir.Sensors": "http://dagair_sensors_api_1:80/"
     }
 }
