--- a/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.json
+++ b/src/DagAir_IngestionNode/DagAir.IngestionNode/appsettings.json
@@ -30,10 +30,9 @@
         "routingKey": "room_measurements"
     },
     "DagAirInfluxConfiguration": {
-        "token": "test_token1",
-        "org": "6ef31b83912e46c2",
-        "orgId": "6ef31b83912e46c2",
-        "bucketName": "dagair_bucket",
+        "token": "local_token1",
+        "org": "local_org1",
+        "bucketName": "local_bucket1",
         "url": "http://localhost:8086",
         "retention": 3600
     },
