--- a/src/DagAir_ClientNode/DagAir.ClientNode/appsettings.Docker.json
+++ b/src/DagAir_ClientNode/DagAir.ClientNode/appsettings.Docker.json
@@ -4,9 +4,6 @@
         "hostName": "rabbitmq",
         "virtualHost": "dagair",
         "protocol": "rabbitmq://",
-        "connectionName": "policy-node"
-    },
-    "serviceUrls": {
-        "DagAir.Policies": "http://dagair_policies_api_1:80/"
+        "connectionName": "client-node"
     }
 }
