--- a/src/DagAir_IngestionNode/DagAir.IngestionNode/Properties/launchSettings.json
+++ b/src/DagAir_IngestionNode/DagAir.IngestionNode/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_URLS": "https://localhost:5001;http://localhost:5000"
+        "ASPNETCORE_URLS": "http://localhost:5000"
       }
     }
   }
