DAGAIR-19 Fix github workflows

--- a/.github/workflows/continuous-integration.policies.yml
+++ b/.github/workflows/continuous-integration.policies.yml
@@ -39,4 +39,4 @@ jobs:
         run: |
           docker build \
           -f ./src/DagAir_Policies/Dockerfile.Migrations \
-          .
+          ./src
