--- a/.github/workflows/continuous-integration.ingestion-node.yml
+++ b/.github/workflows/continuous-integration.ingestion-node.yml
@@ -41,4 +41,4 @@ jobs:
         run: |
           docker build \
           -f ./src/DagAir_IngestionNode/Dockerfile \
-          .
+          ./src
