--- a/.github/workflows/continuous-integration.sensors.yml
+++ b/.github/workflows/continuous-integration.sensors.yml
@@ -39,4 +39,4 @@ jobs:
         run: |
           docker build \
           -f ./src/DagAir_Sensors/Dockerfile.Migrations \
-          .
+          ./src
