--- a/.github/workflows/continuous-delivery.webclientapp.yml
+++ b/.github/workflows/continuous-delivery.webclientapp.yml
@@ -1,4 +1,4 @@
-name: continuous-delivery
+name: cd.webclientapp
 
 env:
   SERVICE_NAME: dagair-web-client-app
@@ -28,6 +28,8 @@ jobs:
 
     - name: Set up GitVersion
       uses: gittools/actions/gitversion/setup@v0.9.10
+      with:
+        versionSpec: '5.x'
 
     - name: Determine GitVersion
       id: gitversion
