--- a/.github/workflows/continuous-delivery.webclientapp.yml
+++ b/.github/workflows/continuous-delivery.webclientapp.yml
@@ -34,6 +34,8 @@ jobs:
     - name: Determine GitVersion
       id: gitversion
       uses: gittools/actions/gitversion/setup@v0.9.10
+      with:
+        versionSpec: '5.x'
 
     - name: Build & Test
       shell: bash
