--- a/.github/workflows/continuous-delivery.policy-node.yml
+++ b/.github/workflows/continuous-delivery.policy-node.yml
@@ -60,7 +60,7 @@ jobs:
       run: |
         docker build \
         -f ./src/DagAir_PolicyNode/Dockerfile \
-        --tag ${{ env.APP_IMAGE_TAG }}
+        --tag ${{ env.APP_IMAGE_TAG }} \
         .
 
     - name: Docker tag images
