DAGAIR-19 Fix github workflows

--- a/.github/workflows/continuous-delivery.sensors.yml
+++ b/.github/workflows/continuous-delivery.sensors.yml
@@ -61,7 +61,7 @@ jobs:
         docker build \
         -f ./src/DagAir_SensorsNode/Dockerfile \
         --tag ${{ env.APP_IMAGE_TAG }} \
-        .
+        ./src
 
     - name: Docker tag images
       if: |
