--- a/.github/workflows/continuous-delivery.policies.yml
+++ b/.github/workflows/continuous-delivery.policies.yml
@@ -2,7 +2,7 @@ name: cd.policies
 
 env:
   SERVICE_NAME: dagair-policies
-  CONTAINER_REGISTRY: dagair.azurecr.io
+  CONTAINER_REGISTRY: dagairacr.azurecr.io
 
 on:
   push:
