--- a/.github/workflows/continuous-delivery.sensors.yml
+++ b/.github/workflows/continuous-delivery.sensors.yml
@@ -2,7 +2,7 @@ name: cd.sensors
 
 env:
   SERVICE_NAME: dagair-sensors
-  CONTAINER_REGISTRY: dagair.azurecr.io
+  CONTAINER_REGISTRY: dagairacr.azurecr.io
 
 on:
   push:
