--- a/.github/workflows/continuous-delivery.webclientapp.yml
+++ b/.github/workflows/continuous-delivery.webclientapp.yml
@@ -2,7 +2,7 @@ name: cd.webclientapp
 
 env:
   SERVICE_NAME: dagair-web-client-app
-  CONTAINER_REGISTRY: dagair.azurecr.io
+  CONTAINER_REGISTRY: dagairacr.azurecr.io
 
 on:
   push:
